--- a/pom.xml
+++ b/pom.xml
@@ -6,18 +6,25 @@
 
     <groupId>me.theseems.tomshelby</groupId>
     <artifactId>devpack</artifactId>
-    <version>0.3D</version>
+    <version>0.4D</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
-            <groupId>me.theseems</groupId>
-            <artifactId>tomshelby</artifactId>
-            <version>0.6D</version>
+            <groupId>com.github.TomShelbyBot</groupId>
+            <artifactId>TomShelbyBot</artifactId>
+            <version>0.10D-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
